<resources>
    <string name="app_name">Menu</string>
    <string name="menu">MENU FRAGMENT</string>
    <string name="menu_mini">MENU MINI FRAGMENT</string>
    <string name="basket">BASKET FRAGMENT</string>
    <string name="account">ACCOUNT FRAGMENT</string>
    <string name="search">SEARCH FRAGMENT</string>
    <string name="info">Info</string>
    <string name="avatar">TODO</string>
    <string name="home_">HOME FRAGMENT</string>
    <string name="Cat_Pekarny">пекарни и кондитерские</string>
    <string name="fasfud">ФАСФУД</string>
    <string name="aziat">Азиатская кухня</string>
    <string name="supi">СУПЫ</string>
    <string name="btn_account">Account</string>
    <string name="btn_basket">Basket</string>
    <string name="btn_home">Home</string>
    <string name="btn_search">Search</string>
    <string name="brn_scrol">brn_scrol_menu</string>
    <string name="все_меню">Все меню</string>
    <string name="с_мясом">с мясом</string>
    <string name="с_рисом">с рисом</string>
    <string name="с_рыбой">с рыбой</string>
    <string name="салаты">салаты</string>
    <string name="Блюдо">Блюдо</string>
    <string name="Блины">Блины</string>
    <string name="Пельмени">Пельмени</string>
    <string name="Шницель">Шницель</string>
    <string name="Рататуй">Рататуй</string>
    <string name="Паэлья">Паэлья</string>
    <string name="Фетучинни_с_грибами">Фетучинни с грибами</string>
    <string name="Рулеты_из_ветчины">Рулеты из ветчины</string>
    <string name="Зеленый_салат">Зеленый салат</string>
    <string name="Тортелини">Тортелини</string>
    <string name="Рыба_с_овощами_и_рисом">Рыба с овощами и рисом</string>
    <string name="Салат_по_восточному">Салат по восточному</string>
    <string name="Рис_с_овощами">Рис с овощами</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Салат_цезарь">Салат цезарь</string>
    <string name="Салат_королевский_с_говядиной">Салат королевский с говядиной</string>
    <string name="Мясо_ассорти_в_соусе">Мясо ассорти в соусе</string>
    <string name="Паэлья_из_утки">Паэлья из утки</string>
    <string name="name_dish">Name_dish</string>
    <string name="dish">Dish</string>
    <string name="price">Price</string>
    <string name="description">description</string>
    <string name="Weight">Weight</string>
    <string name="Добавить_в_корзину">Добавить в корзину</string>
    <string name="плюс">+</string>
    <string name="минус">-</string>
    <string name="количество">0</string>
    <string name="Скрол_корзина">Скрол корзина</string>
    <string name="Лагман_удон">Лагман удон</string>
    <string name="Фунчоза">Фунчоза с креветками и овощами</string>
    <string name="Суп_рамен">Суп рамен со свининой</string>
    <string name="image_Basket">ImageBasket</string>
    <string name="count_price">count_price</string>
    <string name="К_оплате">К оплате:</string>
    <string name="назад_в_меню">back</string>
    <string name="Username">Username</string>
    <string name="todo">TODO</string>


</resources>