<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80B3A9A9"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:clickable="true"
    tools:ignore="ExtraText"
    tools:context=".fragments.Menu_mini">
    <!-- #80 определяет уровень прозрачности (значение от 00 до FF) -->
    <!-- Добавленный атрибут clickable позволяет поглощать нажатия сквозь прозрачный фон -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="#F3EFEF"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/im"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/Блюдо"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/name_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/name_dish"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_dish"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/Weight"
                android:textColor="@color/greey"
                android:textSize="14sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="left"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <Button
                android:id="@+id/at_Bascket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/oranj"
                android:text="@string/Добавить_в_корзину"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>