<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Menu">

    <HorizontalScrollView
        android:id="@+id/btn_scrol"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:contentDescription="@string/brn_scrol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="VisualLintBounds">

            <Button
                android:id="@+id/btn_Все_меню"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/все_меню"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_салаты"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/салаты"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_с_рисом"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/с_рисом"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_с_рыбой"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/с_рыбой"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_с_мясом"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/с_мясом"
                tools:ignore="ButtonStyle,TextContrastCheck" />
        </LinearLayout>

    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/scr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_scrol"
        tools:ignore="UnknownId">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextImage2"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Рис с овощами" />

                <TextView
                    android:id="@+id/TextImage3"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="Салат по восточному" />

                <TextView
                    android:id="@+id/TextImage4"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Рыба с овощами и рисом" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextImage5"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Тортелини" />

                <TextView
                    android:id="@+id/TextImage6"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="Зеленый салат" />

                <TextView
                    android:id="@+id/TextImage7"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Рулеты из ветчины" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextImage8"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Фетучинни с грибами" />

                <TextView
                    android:id="@+id/TextImage9"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="Паэлья" />

                <TextView
                    android:id="@+id/TextImage10"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Рататуй" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextImage11"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Шницель" />

                <TextView
                    android:id="@+id/TextImage12"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="Пельмени" />

                <TextView
                    android:id="@+id/TextImage13"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Блины" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextImage14"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="  Рис с овощами" />

                <TextView
                    android:id="@+id/TextImage15"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:text="Рис с овощами" />

                <TextView
                    android:id="@+id/TextImage16"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Рис с овощами" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/Блюдо"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>